# p4ciopt

./: .gitignore  DEMO.md  README.md  pyproject.toml
p4opt/: __init__.py  cli.py  db.py
p4opt/dashboard/: __init__.py  app.py
p4opt/monitor/: __init__.py  degradation.py
p4opt/runner/: __init__.py  pytest_runner.py  recorder.py
p4opt/scripts/: seed_history.py
p4opt/selector/: __init__.py  correlator.py  import_graph.py  mapper.py  scorer.py
p4opt/vcs/: __init__.py  base.py  git_adapter.py  p4_adapter.py
sample_project/src/: auth.py  cache.py  calculator.py  database.py  strings.py  validators.py
sample_project/tests/: conftest.py  test_auth.py  test_cache.py  test_calculator.py  test_database.py  test_strings.py  test_validators.py
scripts/: preflight.ps1
