[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "p4opt"
version = "0.1.0"
description = "P4CIOptimizer — Test smarter, ship faster. Smart test selection + runtime degradation detection for CI."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Chirag Shah", email = "chirag.shah@perforce.com" }]
license = { text = "MIT" }
dependencies = [
    "typer>=0.12,<0.16",
    "rich>=13.0",
    "pytest>=8.0,<9.0",
    "pytest-json-report>=1.5,<2.0",
    "scipy>=1.11",
    "numpy>=1.26",
    "streamlit>=1.32",
    "plotly>=5.18",
    "pandas>=2.0",
    "statsmodels>=0.14",
]

[project.scripts]
p4opt = "p4opt.cli:app"

[tool.setuptools.packages.find]
include = ["p4opt*"]
exclude = ["sample_project*", "scripts*", "tests*"]
